[package]
name = "dw_apb_uart"
authors = ["Luoyuan Xiao <xiaoluoyuan@163.com>"]
version = "0.2.0"
edition = "2018"
license = "GPL-2.0"
repository = "https://github.com/elliott10/dw_apb_uart"
description = "Uart snps,dw-apb-uart driver in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
board_bst-a1000b = []
board_thead-c910 = []
board_rk3588 = []

[dependencies]
tock-registers = "0.8"

# uart_16550 = { git = "https://github.com/rust-osdev/uart_16550.git", rev = "378d468b", optional = true }
